 NEWS/ChangeLog for rJava
--------------------------

0.6-1	(under development)
    o	substitute $(JAVA_HOME) in configuration flags when necessary

0.6-0	2008-09-22
    o	add support for object cache - see .jcache() - based
	on Java serialization

0.5-2	(never released, turned into 0.6-0)
    o	add direct support for raw vectors as method parameters
	(before .jarray(r) had to be used)

    o	add .jserialize() and .junserialize() functions for
	Java-serialization (do not confuse with R serialization!)

0.5-1	2007-11-05
    o	fix crashes in Windows when Java calls the vfprintf hook

    o	enhance Java environment checks, add more specific errors

    o	add support for r.arch system property which allows multi-arch
	support on platforms that don't have fat binaries (e.g. Linux)

0.5-0	2007-08-22
    o	**API CHANGE**
	The order of arguments of .jfield has been changed to match
	the order used in .jcall and the return value is as expected
	and doesn't need .jsimplify anymore.

    o	The implementation of .jfield no longer uses reflection
	it supports static fields and .jfield<-() was added.

    o	Consolidate interface code for static/non-static calls.
	It is now possible to call a static method using a non-static
	object.

    o	Add .jpackage function for initialization of Java packages.
	See documentation for details, packages should no longer
	use .jinit in their initialization code.

    o	Add preliminary JRI support from R (see .jengine)

    o	Prepare hooks for de-serialization

    o	Add support for short Java type

    o	Add support for convertors

    o	Fix R-devel compatibility issues

    o	Fix a memory leak in string array handling

    o	Use Java settings from R for compilation

    o	Add a custom class loader

    o	Fix a bug in .jcastToArray that produced invalid signatures

    o	Added support for [Z in .jevalArray

    o	Fix a bug in .jarray missing [ prefix for native type arrays

0.4 branch has been branched off the trunk, see 0.4-branch for NEWS
