@@ -94,8 +94,11 @@ void profReport(char *fmt, ...);
 /* define mkCharUTF8 in a compatible fashion */
 #if R_VERSION < R_Version(2,7,0)
 #define mkCharUTF8(X) mkChar(X)
+#define CHAR_UTF8(X) CHAR(X)
 #else
 #define mkCharUTF8(X) mkCharCE(X, CE_UTF8)
+#define CHAR_UTF8(X) rj_char_utf8(X)
+extern const char *rj_char_utf8(SEXP);
 #endif
 
 /* in callbacks.c */
